[package]
name = "lineup"
version = "0.10.0"
edition = "2021"
description = "format a collection of strings"
license = "GPL-3.0-or-later"
homepage = "https://github.com/biagang/lineup"
repository = "https://github.com/biagang/lineup"
readme = "README.md"
keywords = ["format", "string"]
categories = ["command-line-utilities", "encoding", "value-formatting", "visualization"]

[dependencies]
clap = { version = "4.0.18", features = ["derive", "cargo"] }
derive_builder = "0.11.2"
