[package]
name = "lineup"
version = "0.2.0"
edition = "2021"
description = "read/write collection of formatted UTF-8 string items"
license = "GPL-3.0-or-later"
homepage = "https://github.com/biagang/lineup"
repository = "https://github.com/biagang/lineup"
readme = "README.md"
keywords = ["format", "string"]
categories = ["command-line-utilities", "encoding", "value-formatting", "visualization"]

[dependencies]
clap = { version = "4.0.18", features = ["derive", "cargo"] }
derive-new = "0.5.9"
derive_builder = "0.11.2"
